# aiidalab-qe-base

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/aiidalab_qe_base/: mixins.py  utils.py  widgets.py
src/aiidalab_qe_base/models/: code.py  model.py
src/aiidalab_qe_base/panels/configuration/: model.py
src/aiidalab_qe_base/panels/panel/: panel.py
src/aiidalab_qe_base/panels/resources/: model.py  resources.py
src/aiidalab_qe_base/panels/results/: model.py
src/aiidalab_qe_base/panels/settings/: model.py
src/aiidalab_qe_base/plugin/panels/resources/: resources.py
tests/: conftest.py  test_infobox.py  test_mixins.py  test_models.py  test_panel.py  test_panels.py  test_plugin.py  test_utils.py  test_widgets.py
