[project]
name = "aiidalab-qe-base"
description = "Utilities, widgets, and components shared by the AiiDAlab Quantum ESPRESSO app and its plugins"
authors = [
    { name = "AiiDAlab team", email = "aiidalab@materialscloud.org" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "aiida-core~=2.5,<3",
    "aiidalab-widgets-base @ git+https://github.com/aiidalab/aiidalab-widgets-base@master",
    "aiida-quantumespresso~=4.12.0",
    "anywidget==0.9.13",
    "table_widget~=0.0.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit~=3.2",
]

[project.urls]
Homepage = "https://github.com/aiidalab/aiidalab-qe-base"
Repository = "https://github.com/aiidalab/aiidalab-qe-base"

[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
include = ["aiidalab_qe_base*"]

[tool.setuptools.dynamic]
version = { attr = "aiidalab_qe_base.__version__" }
